--- a/Epiflix/src/App.css
+++ b/Epiflix/src/App.css
@@ -111,3 +111,22 @@ h2.mb-4 {
 .footer-icon {
   margin-right: 10px;
 }
+
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #e50914;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 0.6s linear infinite;
+  margin: 0;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
